added filters, crud

--- a/ui/templates/home.html
+++ b/ui/templates/home.html
@@ -138,7 +138,7 @@
 			<!-- offer 01 -->
 			<div class="col-lg-12">
 				<div class="trending-ads-slide">
-					{% include 'partials/list_row.html' %}
+					{% include 'posts/partials/list_row.html' %}
 				</div>
 			</div>
 		</div>
