--- a/ui/templates/signup.html
+++ b/ui/templates/signup.html
@@ -1,17 +1,45 @@
-<h2>Sign up Form</h2>
-<form method="post">
-  {% csrf_token %}
-  {% for field in form %}
-    <p>
-      {{ field.label_tag }}<br>
-      {{ field }}
-      {% if field.help_text %}
-        <small style="color: grey">{{ field.help_text }}</small>
-      {% endif %}
-      {% for error in field.errors %}
-        <p style="color: red">{{ error }}</p>
-      {% endfor %}
-    </p>
-  {% endfor %}
-  <button type="submit">Sign up</button>
-</form>
+{% extends 'home.html' %}
+{% load static %}
+{% load crispy_forms_tags %}
+{% block content %}
+
+<section class="login py-5 border-top-1">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-5 col-md-8 align-item-center">
+                    <div class="border border">
+                        <h3 class="bg-gray p-4">Register Now</h3>
+                        <form method="post">
+                            {% csrf_token %}
+                            <fieldset class="p-4">
+                                    <div class="col-lg-12">
+                                        {{ form.username|as_crispy_field }}
+                                    </div>
+
+                                    <div class="col-lg-12">
+                                        {{ form.email|as_crispy_field }}
+                                    </div>
+
+                                    <div class="col-12">
+                                        {{ form.first_name|as_crispy_field }}
+                                    </div>
+
+                                    <div class="col-12">
+                                        {{ form.last_name|as_crispy_field }}
+                                    </div>
+
+                                    <div class="col-6">
+                                        {{ form.password1|as_crispy_field }}
+                                    </div>
+                                <div class="col-6">
+                                        {{ form.password2|as_crispy_field }}
+                                    </div>
+                                <button type="submit" class="d-block py-3 px-4 bg-primary text-white border-0 rounded font-weight-bold">Register Now</button>
+                            </fieldset>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+{% endblock %}
