--- a/ui/templates/posts/partials/create_post_view.html
+++ b/ui/templates/posts/partials/create_post_view.html
@@ -13,16 +13,27 @@
                     <div class="col-lg-12">
                         <h3>Post Your ad</h3>
                     </div>
+                     <div class="form-group col-md-6 mb-0">
+                        {{ form.assigned_product|as_crispy_field }}
+
+                    </div>
+                    <div class="col-md-6 mb-0">
+                         <p class="list-inline-item"><a class="btn btn-main" href="{% url 'product_create' %}">Add Product</a></p>
+                     </div>
                     <div class="form-group col-md-6 mb-0">
-                         {{ form.title|as_crispy_field }}
+                        {{ form.title|as_crispy_field }}
                     </div>
-                <div class="form-group col-md-6 mb-0">
-                         {{ form.post_type|as_crispy_field }}
+                    <div class="form-group col-md-6 mb-0">
+                     {{ form.post_type|as_crispy_field }}
                     </div>
-                <div class="col-12">
-                         {{ form.description|as_crispy_field }}
-                </div>
+                    <div class="col-12">
+                        {{ form.description|as_crispy_field }}
+                    </div>
+                    <div class="col-12">
+                        {{ form.status|as_crispy_field }}
+                    </div>
         <!-- submit button -->
+
             </div>
             </fieldset>
         <button type="submit" class="btn btn-primary d-block mt-2">Post Your Ad</button>
